--- a/package.json
+++ b/package.json
@@ -1,23 +1,17 @@
 {
-  "name": "heartpath-ai---your-companion-&-guide",
+  "name": "heartpath-ai",
+  "version": "0.1.0",
   "private": true,
-  "version": "0.0.0",
-  "type": "module",
-  "scripts": {
-    "dev": "vite",
-    "build": "vite build",
-    "preview": "vite preview"
-  },
   "dependencies": {
+    "@google/genai": "^1.38.0",
+    "@supabase/supabase-js": "^2.39.3",
     "react": "18.2.0",
-    "react-dom": "^19.2.4",
-    "react-quill": "2.0.0-beta.4",
-    "@google/genai": "^1.38.0"
+    "react-dom": "18.2.0",
+    "react-quill": "2.0.0-beta.4"
   },
   "devDependencies": {
-    "@types/node": "^22.14.0",
-    "@vitejs/plugin-react": "^5.0.0",
-    "typescript": "~5.8.2",
-    "vite": "^6.2.0"
+    "@types/react": "^18.2.0",
+    "@types/react-dom": "^18.2.0",
+    "typescript": "^5.0.0"
   }
 }
