refactor: Update package.json name
Renames the package from `heartpath-ai` to `heartpath-ai---your-companion-&-guide` to better reflect the application's full name and branding.

--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "heartpath-ai",
+  "name": "heartpath-ai---your-companion-&-guide",
   "version": "0.1.0",
   "private": true,
   "dependencies": {
