refactor: Simplify styling and update package name
Removes unused CSS animations and selection/focus styles.
Updates the package name to be more concise.
Replaces console.log with console.warn for Supabase missing credentials.

--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "heartpath-ai---your-companion-&-guide",
+  "name": "heartpath-ai",
   "version": "0.1.0",
   "private": true,
   "dependencies": {
