--- a/package.json
+++ b/package.json
@@ -1,17 +1,24 @@
 {
-  "name": "heartpath-ai---your-companion-&-guide",
+  "name": "heartpath-ai",
   "version": "0.1.0",
   "private": true,
+  "scripts": {
+    "dev": "vite",
+    "build": "tsc && vite build",
+    "preview": "vite preview"
+  },
   "dependencies": {
     "@google/genai": "^1.38.0",
     "@supabase/supabase-js": "^2.39.3",
-    "react": "18.2.0",
-    "react-dom": "18.2.0",
-    "react-quill": "2.0.0-beta.4"
+    "react": "^18.2.0",
+    "react-dom": "^18.2.0",
+    "react-quill": "^2.0.0-beta.4"
   },
   "devDependencies": {
     "@types/react": "^18.2.0",
     "@types/react-dom": "^18.2.0",
-    "typescript": "^5.0.0"
+    "@vitejs/plugin-react": "^4.2.1",
+    "typescript": "^5.3.3",
+    "vite": "^5.0.12"
   }
 }
